--- a/optimization.bib
+++ b/optimization.bib
@@ -1,7 +1,7 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% https://bibdesk.sourceforge.io/
 
-%% Created for Jeff Erickson at 2024-11-10 21:03:54 -0600 
+%% Created for Jeff Erickson at 2025-04-11 06:40:54 -0500 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
@@ -18,7 +18,8 @@
 	pages = {377--404},
 	title = {The analysis of a nested dissection algorithm},
 	volume = {50},
-	year = {1987}}
+	year = {1987},
+	bdsk-url-1 = {https://doi.org/10.1007/BF01396660}}
 
 @article{mv-ndsnb-93,
 	author = {julio M. Stern and Vavasis, Stephen A.},
@@ -3834,7 +3835,8 @@ Memorandum RM-1573, The RAND Corporation, Santa Monica, California, [October 24,
 @book{gls-gaco-93,
 	author = {Gr{\"o}tschel, Martin and Lov{\'a}sz, L{\'a}szl{\'o} and Schrijver, Alexander},
 	date-added = {2008-07-23 15:10:33 -0500},
-	date-modified = {2009-07-28 11:00:51 -0500},
+	date-modified = {2025-04-11 06:40:53 -0500},
+	doi = {10.1007/978-3-642-78240-4},
 	edition = {2nd},
 	keywords = {ellipsoid},
 	number = {2},
