--- a/topology.bib
+++ b/topology.bib
@@ -1,12 +1,222 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% https://bibdesk.sourceforge.io/
 
-%% Created for Jeff Erickson at 2025-04-01 14:20:00 -0500 
+%% Created for Jeff Erickson at 2025-06-17 15:11:17 -0500 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@inproceedings{r-ppdij-84,
+	author = {Rosenstiehl, Pierre},
+	booktitle = {Graph Theory and Combinatorics},
+	date-added = {2025-06-15 18:41:10 -0500},
+	date-modified = {2025-06-15 18:42:09 -0500},
+	pages = {259--271},
+	publisher = {Academic Press},
+	title = {Planar permutations defined by two intersecting {Jordan} curves},
+	year = {1984}}
+
+@article{hmrt-sjslt-86,
+	abstract = {For a Jordan curve C in the plane nowhere tangent to the x axis, let x1, x2,{\ldots}, xn be the abscissas of the intersection points of C with the x axis, listed in the order the points occur on C. We call x1, x2,{\ldots}, xn a Jordan sequence. In this paper we describe an O(n)-time algorithm for recognizing and sorting Jordan sequences. The problem of sorting such sequences arises in computational geometry and computational geography. Our algorithm is based on a reduction of the recognition and sorting problem to a list-splitting problem. To solve the list-splitting problem we use level-linked search trees.},
+	author = {Hoffmann, Kurt and Mehlhorn, Kurt and Rosenstiehl, Pierre and Tarjan, Robert E.},
+	date-added = {2025-06-15 18:38:28 -0500},
+	date-modified = {2025-06-15 18:38:57 -0500},
+	doi = {10.1016/S0019-9958(86)80033-X},
+	journal = {Inf. Control},
+	number = {1},
+	pages = {170--184},
+	title = {Sorting {Jordan} sequences in linear time using level-linked search trees},
+	volume = {68},
+	year = {1986},
+	bdsk-url-1 = {https://doi.org/10.1016/S0019-9958(86)80033-X}}
+
+@article{fntv-sljspc-90,
+	abstract = {Given the intersection points of a Jordan curve with the x-axis in the order in which they occur along the curve, the Jordan sorting problem is to sort them into the order in which they occur along the x-axis. This problem arises in clipping a simple polygon against a rectangle (a ``window'') and in efficient algorithms for triangulating a simple polygon. Hoffman, Mehlhorn, Rosenstiehl, and Tarjan proposed an algorithm that solves the Jordan sorting problem in time that is linear in the number of intersection points, but their algorithm requires the use of a sophisticated data structure, the level-linked search tree. We propose a variant of the algorithm of Hoffman et al. that retains the linear-time bound but simplifies both the primary data structure and the operations it must perform.},
+	author = {Fung, Khun Yee and Nicholl, Tina M. and Tarjan, Robert E. and {Van Wyk}, Christopher J.},
+	date-added = {2025-06-15 18:37:31 -0500},
+	date-modified = {2025-06-15 18:38:04 -0500},
+	doi = {10.1016/0020-0190(90)90111-A},
+	journal = {Inf. Proc. Letters},
+	number = {2},
+	pages = {85--92},
+	read = {1},
+	title = {Simplified linear-time jordan sorting and polygon clipping},
+	volume = {35},
+	year = {1990},
+	bdsk-url-1 = {https://doi.org/10.1016/0020-0190(90)90111-A}}
+
+@article{s-d2-59,
+	author = {Smale, Stephen},
+	date-added = {2025-06-15 15:03:41 -0500},
+	date-modified = {2025-06-15 15:05:31 -0500},
+	doi = {10.1090/S0002-9939-1959-0112149-8},
+	journal = {Proc. Amer. Math. Soc.},
+	pages = {621--626},
+	title = {Diffeomorphisms of the $2$-sphere},
+	volume = {10},
+	year = {1959},
+	bdsk-url-1 = {https://doi.org/10.1090/S0002-9939-1959-0112149-8}}
+
+@article{k-dezf-26,
+	author = {Kneser, Helmuth},
+	date-added = {2025-06-15 15:01:56 -0500},
+	date-modified = {2025-06-15 18:48:44 -0500},
+	journal = {Math. Z.},
+	pages = {362--372},
+	read = {1},
+	title = {Die {Deformationss{\"a}tze} der einfach zusammenh{\"a}ngenden {Fl{\"a}chen}},
+	url = {http://eudml.org/doc/167886},
+	volume = {25},
+	year = {1926},
+	bdsk-url-1 = {http://eudml.org/doc/167886}}
+
+@article{bk-sapsr-82,
+	author = {Brehm, Ulrich and K{\"u}hnel, Wolfgang},
+	date-added = {2025-05-01 12:12:21 -0500},
+	date-modified = {2025-05-01 12:13:54 -0500},
+	doi = {10.1007/BF00147585},
+	journal = {Geom. Dedicata},
+	keywords = {spherical polygon triangulation},
+	pages = {435--461},
+	read = {1},
+	title = {Smooth approximation of polyhedral surfaces regarding curvatures},
+	volume = {12},
+	year = {1982},
+	bdsk-url-1 = {https://doi.org/10.1007/BF00147585}}
+
+@article{b-p3-70,
+	abstract = {Given any 3-dimensional convex polytopeP, and any simple circuitC in the 1-skeleton ofP, there is a convex polytopeP′combinatorially equivalent toP, and a direction such that ifP′is projected orthogonally in this direction, then the inverse image of the boundary of the projection is the circuit inP′corresponding to the circuitC inP.},
+	author = {Barnette, David W.},
+	comments = {For any simple cycle C in any 3-connected planar graph G, there is a convex 3-polytope P in which the horizon from some direction is C.},
+	date-added = {2025-04-13 15:17:45 -0500},
+	date-modified = {2025-04-13 15:21:03 -0500},
+	doi = {10.1007/BF02771563},
+	journal = {Israel J. Math.},
+	number = {3},
+	pages = {304--308},
+	title = {Projections of 3-polytopes},
+	volume = {8},
+	year = {1970},
+	bdsk-url-1 = {https://doi.org/10.1007/BF02771563}}
+
+@article{l-igm-63,
+	author = {Auslander, Louis and Brown, Thomas and Youngs, John W. T.},
+	coden = {IUMJAB},
+	date-added = {2025-04-13 15:08:12 -0500},
+	date-modified = {2025-04-13 15:11:22 -0500},
+	doi = {10.1512/iumj.1963.12.12040},
+	fjournal = {Indiana University Mathematics Journal},
+	issn = {0022-2518},
+	issue = 4,
+	journal = {J. Math. Mech. [=~Indiana Univ. Math. J.]},
+	pages = {629--634},
+	title = {The Imbedding of Graphs in Manifolds},
+	volume = {12},
+	year = {1963},
+	bdsk-url-1 = {https://doi.org/10.1512/iumj.1963.12.12040}}
+
+@misc{eh-ssgs-25a,
+	arxiv = {2504.05098},
+	author = {Erickson, Jeff and Howard, Christian},
+	date-added = {2025-04-10 13:02:45 -0500},
+	date-modified = {2025-04-11 06:38:45 -0500},
+	doi = {https://doi.org/10.48550/arXiv.2504.0509},
+	howpublished = {Preprint},
+	month = {April},
+	title = {Shelling and sinking graphs on the sphere},
+	year = {2025},
+	bdsk-url-1 = {https://doi.org/10.48550/arXiv.2504.0509}}
+
+@article{c-rsp-85,
+	author = {Coxeter, Harold S. M.},
+	date-added = {2025-04-04 22:46:40 -0500},
+	date-modified = {2025-04-04 22:49:54 -0500},
+	doi = {10.1007/BF01161657},
+	journal = {Math. Z.},
+	number = {4},
+	pages = {559--591},
+	title = {Regular and semi-regular polytopes. {II}},
+	volume = {188},
+	year = {1985},
+	bdsk-url-1 = {https://doi.org/10.1007/BF01161657}}
+
+@book{c-rp-48,
+	author = {Coxeter, Harold S. M.},
+	date-added = {2025-04-04 17:42:25 -0500},
+	date-modified = {2025-04-04 22:46:36 -0500},
+	publisher = {Metheun \& Co. Ltd.},
+	title = {Regular Polytopes},
+	year = {1948}}
+
+@article{fi-spmvh-17,
+	arxiv = {1310.1560},
+	author = {Fillastre, Fran{\c c}ois and Izmestiev, Ivan},
+	date-added = {2025-04-04 11:30:13 -0500},
+	date-modified = {2025-04-04 11:32:20 -0500},
+	doi = {10.1112/S002557931600019X},
+	journal = {Mathematika},
+	number = {1},
+	pages = {124--183},
+	title = {Shapes of polyhedra, mixed volumes and hyperbolic geometry},
+	volume = {63},
+	year = {2017},
+	bdsk-url-1 = {https://doi.org/10.1112/S002557931600019X}}
+
+@article{m-rpps-73,
+	abstract = {In this paper we describe a variant of the diagram techniques, such as Gale diagrams for polytopes and positive diagrams for positive bases, which is appropriate for polyhedral sets. We obtain our new technique as a translation-invariant representation of polytopes or polyhedral sets. This approach leads naturally to simpler proofs of the familiar combinatorial diagram relationships. However, this method is more versatile than those previously employed, in that it can be used to investigate linear systems of polyhedral sets, and metrical properties such as volume. In particular, we give an easy proof of a result of Meyer on decomposability of polytopes, and a more perspicuous way of looking at the well-known theorem of Minkowski on the realizability of polytopes whose facets have given outer normal vectors and areas.},
+	author = {McMullen, Peter},
+	date = {1973/09/01},
+	date-added = {2025-04-04 11:20:52 -0500},
+	date-modified = {2025-04-04 11:21:06 -0500},
+	doi = {10.1007/BF00149284},
+	id = {Mcmullen1973},
+	isbn = {1572-9168},
+	journal = {Geom. Dedicata},
+	number = {1},
+	pages = {83--99},
+	title = {Representations of polytopes and polyhedral sets},
+	volume = {2},
+	year = {1973},
+	bdsk-url-1 = {https://doi.org/10.1007/BF00149284}}
+
+@article{s-dpb-71,
+	author = {Shephard, Geoffrey C.},
+	date-added = {2025-04-04 11:02:02 -0500},
+	date-modified = {2025-04-04 11:02:38 -0500},
+	doi = {10.1112/jlms/s2-4.1.165},
+	issn = {0024-6107},
+	journal = {J. London Math. Soc., Ser. 2},
+	number = {1},
+	pages = {165--175},
+	title = {Diagrams for Positive Bases},
+	volume = {4},
+	year = {1971},
+	bdsk-url-1 = {https://doi.org/10.1112/jlms/s2-4.1.165}}
+
+@inbook{e-j-87,
+	abstract = {Synergetics can be described as dynamic geometry. Its treatment of polyhedra as vector diagrams and emphasis on the changes and transformations in systems distinguishes Fuller's work from the traditional geometric approach. His conviction that mathematics ought to supply dynamic models---in recognition of dynamic Universe---led to a number of interesting discoveries. ``Jitterbug'' is the most striking example.},
+	author = {Edmondson, Amy C.},
+	booktitle = {A Fuller Explanation: The Synergetic Geometry of R. Buckminster Fuller},
+	chapter = {11},
+	date-added = {2025-04-03 10:20:32 -0500},
+	date-modified = {2025-04-03 10:21:06 -0500},
+	doi = {10.1007/978-1-4684-7485-5_11},
+	pages = {159--174},
+	publisher = {Birkh{\"a}user Boston},
+	title = {Jitterbug},
+	year = {1987},
+	bdsk-url-1 = {https://doi.org/10.1007/978-1-4684-7485-5_11}}
+
+@book{f-segt-75,
+	author = {Fuller, R. Buckminster},
+	date-added = {2025-04-03 10:07:36 -0500},
+	date-modified = {2025-04-13 15:32:16 -0500},
+	note = {In collaboration with E. J. Applewhite},
+	publisher = {Macmillan Pub. Co.},
+	title = {Synergetics: Explorations in the Geometry of Thinking},
+	year = {1975}}
 
 @article{vgohr-sfasc-20,
 	author = {Virtanen, Pauli and Gommers, Ralf and Oliphant, Travis E. and Haberland, Matt and Reddy, Tyler and Cournapeau, David and Burovski, Evgeni and Peterson, Pearu and Weckesser, Warren and Bright, Jonathan and {van der Walt}, St{\'e}fan J. and Brett, Matthew and Wilson, Joshua and Millman, K. Jarrod and Mayorov, Nikolay and Nelson, Andrew R. J. and Jones, Eric and Kern, Robert and Larson, Eric and Carey, C J and Polat, {\.I}lhan and Feng, Yu and Moore, Eric W. and {VanderPlas}, Jake and Laxalde, Denis and Perktold, Josef and Cimrman, Robert and Henriksen, Ian and Quintero, E. A. and Harris, Charles R. and Archibald, Anne M. and Ribeiro, Ant{\^o}nio H. and Pedregosa, Fabian and {van Mulbregt}, Paul and {SciPy 1.0 Contributors}},
@@ -375,9 +585,10 @@
 	abstract = {Can a simple spherical polygon always be triangulated? The answer depends on the definitions of "polygon" and "triangulate".Define a spherical polygon to be a simple, closed curve on a sphere S composed of a finite number of great circle arcs (also known as geodesic arcs) meeting at vertices. Can every spherical polygon be triangulated? Figure 1 shows an example of what is intended.1 The planar analog is well-known and a cornerstone of computational geometry: the interior of every planar simple polygon can be triangulated (and efficiently so). The situation for spherical polygons is not so straightforward. There are three complications.},
 	author = {O'Rourke, Joseph},
 	date-added = {2024-12-02 13:50:10 -0600},
-	date-modified = {2024-12-02 13:50:43 -0600},
+	date-modified = {2025-05-01 12:51:56 -0500},
 	doi = {10.1145/1412700.1412714},
 	journal = {SIGACT News},
+	keywords = {spherical polygon triangulation},
 	month = {September},
 	number = {3},
 	pages = {58--62},
@@ -576,9 +787,9 @@
 	arxiv = {2106.14086},
 	author = {Erickson, Jeff and Lin, Patrick},
 	date-added = {2024-11-29 15:44:00 -0600},
-	date-modified = {2024-11-29 15:44:51 -0600},
+	date-modified = {2025-04-13 15:31:24 -0500},
 	doi = {10.7155/jgaa.00616},
-	journal = {Journal of Graph Algorithms and Applications},
+	journal = {J. Graph Algorithms Appl.},
 	number = {2},
 	pages = {95--118},
 	title = {Planar and Toroidal Morphs Made Easier},
@@ -2129,8 +2340,8 @@ Memorandum RM-1573, The RAND Corporation, Santa Monica, California, [October 24,
 	author = {Buchin, Kevin and Evans, William S. and Frati, Fabrizio and Kostitsyna, Irina and L{\"{o}}ffler, Maarten and Ophelders, Tim and Wolff, Alexander},
 	booktitle = {Proc. 48th Int. Conf. Current Trends in Theory and Practice Comput. Sci. (SOFSEM)},
 	date-added = {2023-02-09 12:04:45 -0600},
-	date-modified = {2025-03-31 14:20:41 -0500},
-	doi = {10.1007/978-3-031-23101-8\_6},
+	date-modified = {2025-04-10 13:36:21 -0500},
+	doi = {10.1007/978-3-031-23101-8_6},
 	pages = {80--95},
 	publisher = {Springer},
 	series = {Lecture Notes Comput. Sci.},
@@ -3761,7 +3972,7 @@ Memorandum RM-1573, The RAND Corporation, Santa Monica, California, [October 24,
 	title = {The Deformation Space of Geodesic Triangulations and Generalized {Tutte's} Embedding Theorem},
 	volume = {7},
 	year = {2023},
-	bdsk-url-1 = {https://doi.org/10.48550/ARXIV.2105.00612}}
+	bdsk-url-1 = {https://doi.org/10.2140/gt.2023.27.3361}}
 
 @misc{bclmmsss-hdu-21,
 	arxiv = {2104.14076},
@@ -8044,8 +8255,9 @@ Memorandum RM-1573, The RAND Corporation, Santa Monica, California, [October 24,
 
 @book{bcss-crc-98,
 	author = {Blum, Lenore and Cucker, Felipe and Shub, Michael and Smale, Steve},
+	comments = {Yes, "Steve"},
 	date-added = {2019-08-25 15:45:33 -0500},
-	date-modified = {2019-08-25 15:48:03 -0500},
+	date-modified = {2025-06-15 15:04:30 -0500},
 	doi = {10.1007/978-1-4612-0701-6},
 	publisher = {Springer},
 	title = {Complexity and Real Computation},
@@ -8972,9 +9184,9 @@ Memorandum RM-1573, The RAND Corporation, Santa Monica, California, [October 24,
 	bdsk-url-1 = {https://doi.org/10.7155/jgaa.00223}}
 
 @article{blps-mopgd-13,
-	author = {Biedl, Therese C. and Lubiw, Anna and Petrick, Mark and Spriggs, Michael J.},
+	author = {Biedl, Therese and Lubiw, Anna and Petrick, Mark and Spriggs, Michael J.},
 	date-added = {2019-05-29 13:50:26 +0200},
-	date-modified = {2021-06-20 18:16:58 -0500},
+	date-modified = {2025-04-13 14:08:14 -0500},
 	doi = {10.1145/2500118},
 	journal = {ACM Trans. Algorithms},
 	number = {4},
@@ -17272,16 +17484,18 @@ A main objective of studying $\Delta\leftrightarrow$Y transformations is finding
 	volume = {9},
 	year = {2000}}
 
-@article{a-dnc-23,
+@article{a-dn-23,
 	author = {Alexander, James W.},
-	comments = {Alexander's theorem: a homeomorphism of the ball the fixes the sphere is isotopic to the identity},
+	comments = {Alexander's theorem: a homeomorphism of the ball that fixes the sphere is isotopic to the identity},
 	date-added = {2012-03-15 17:20:27 +0000},
-	date-modified = {2012-03-15 17:21:33 +0000},
+	date-modified = {2025-06-15 15:13:35 -0500},
 	journal = {Proc. Nat. Acad. Sci. USA},
 	pages = {406--407},
 	title = {On the deformation of an $n$-cell},
+	url = {https://www.jstor.org/stable/84127},
 	volume = {9},
-	year = {1923}}
+	year = {1923},
+	bdsk-url-1 = {https://www.jstor.org/stable/84127}}
 
 @article{l-cdp1c-84,
 	author = {Ladegaillerie, Yves},
@@ -19339,13 +19553,15 @@ A main objective of studying $\Delta\leftrightarrow$Y transformations is finding
 @article{ci-aemgd-00,
 	author = {Calvo, Nestor A. and Idelsohn, Sergio R.},
 	date-added = {2012-01-03 12:59:43 +0000},
-	date-modified = {2012-01-03 13:00:31 +0000},
+	date-modified = {2025-04-13 15:15:06 -0500},
+	doi = {10.1016/S0045-7825(99)00199-1},
 	journal = {Comput. Methods Appl. Mech. Eng.},
 	pages = {371--378},
 	read = {1},
 	title = {All-hexahedral element meshing: {Generation} of the dual mesh by recurrent subdivision},
 	volume = {182},
-	year = {2000}}
+	year = {2000},
+	bdsk-url-1 = {https://doi.org/10.1016/S0045-7825(99)00199-1}}
 
 @article{ls-sim-59,
 	author = {Lashof, Richard K. and Smale, Stephen},
@@ -21850,7 +22066,8 @@ A main objective of studying $\Delta\leftrightarrow$Y transformations is finding
 @article{a-mswb-24,
 	author = {Artin, Emil},
 	date-added = {2011-07-09 23:19:16 -0500},
-	date-modified = {2011-07-09 23:20:19 -0500},
+	date-modified = {2025-04-13 15:14:35 -0500},
+	doi = {10.1007/BF02954622},
 	journal = {Abh. Math. Sem. Hamburg},
 	keywords = {continued fractions},
 	number = {1},
@@ -26751,7 +26968,8 @@ A main objective of studying $\Delta\leftrightarrow$Y transformations is finding
 @article{y-migg-63,
 	author = {Youngs, John W. T.},
 	date-added = {2009-09-13 15:31:46 -0500},
-	date-modified = {2017-06-21 16:10:08 +0000},
+	date-modified = {2025-04-13 15:12:23 -0500},
+	doi = {10.1512/iumj.1963.12.12021},
 	journal = {J. Math. Mech. [=~Indiana Univ. Math. J.]},
 	keywords = {rotation system},
 	number = {3},
@@ -26759,7 +26977,8 @@ A main objective of studying $\Delta\leftrightarrow$Y transformations is finding
 	read = {1},
 	title = {Minimal Imbeddings and the Genus of a Graph},
 	volume = {12},
-	year = {1963}}
+	year = {1963},
+	bdsk-url-1 = {https://doi.org/10.1512/iumj.1963.12.12021}}
 
 @article{r-gvpg-65,
 	author = {Ringel, Gerhard},
@@ -27563,16 +27782,18 @@ A main objective of studying $\Delta\leftrightarrow$Y transformations is finding
 	year = {1974}}
 
 @article{ry-shmcp-68,
-	author = {Ringel, Gerhard and Youngs, J. William T.},
+	author = {Ringel, Gerhard and Youngs, John W. T.},
 	date-added = {2008-07-17 01:36:53 -0500},
-	date-modified = {2012-02-24 12:48:36 +0000},
+	date-modified = {2025-04-13 15:10:17 -0500},
+	doi = {10.1073/pnas.60.2.438},
 	journal = {Proc. Nat. Acad. Sci. USA},
 	keywords = {graphs},
 	pages = {438--445},
 	read = {1},
 	title = {Solution of the {Heawood} Map-Coloring Problem},
 	volume = {60},
-	year = {1968}}
+	year = {1968},
+	bdsk-url-1 = {https://doi.org/10.1073/pnas.60.2.438}}
 
 @article{fgm-fmggi-88,
 	author = {Furst, Merrick L. and Gross, Jonathan L. and McGeoch, Lyle A.},
